--- a/style.css
+++ b/style.css
@@ -28,13 +28,14 @@ h1 {
 	font-family: 'Playfair Display', serif;
 }
 h2 {
-	margin: auto;
-	text-align: center;
-	font-size: 40px;
+/*	margin: auto;*/
+	text-align: left;
+	font-size: 12px;
 	margin-top: 0px;
+	font-weight: bold;
 }
 a {
-	color: blue;
+	color: black;
 	font-size: 30px;
 	text-decoration: none;
 }
@@ -74,4 +75,36 @@ a:visited {
 }*/
 #link {
 	text-align: center;
+	font-size: 35px;
+	text-align: center;
+	border: solid 1px blue;
+	display: block;
+	background-color: white;
+	margin: auto;
+}
+#sidebar {
+	padding: 40px 20px;
+	background-color: black;
+/*	padding-bottom: 69.75%;*/
+}
+#sidebarloc {
+	padding: 40px 20px;
+	background-color: black;
+	padding-bottom: 100%;
+}
+@media (min-width: 1000px) {
+	#sidebar {
+		margin: 0 calc(50vw - 250px);
+		position: absolute;
+		width: 250px;
+		top: 9.75%;
+		right: 47%;
+	}
+	#sidebarloc {
+		margin: 0 calc(50vw - 250px);
+		position: absolute;
+		width: 250px;
+		top: 9.75%;
+		right: 47%;
+	}
 }
