--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ p {
 	text-align: left;
 	font-family: 'Playfair Display', serif;
 }
+img {
+	max-width: 100%;
+}
 h1 {
 	margin: auto;
 	text-align: center;
@@ -36,13 +39,15 @@ h2 {
 }
 a {
 	color: black;
-	font-size: 30px;
+	font-size: inherit;
+	line-height: inherit;
 	text-decoration: none;
 }
 #back {
 	text-align: left;
 	color: blue;
 }
+/*
 a:visited {
 	color: blueviolet;
 	text-decoration: none;
@@ -50,6 +55,7 @@ a:visited {
 #back:visited {
 	color: blueviolet;
 }
+*/
 .PT1 {
 	width: 404px;
 	height: 145px;
@@ -81,16 +87,17 @@ a:visited {
 	display: block;
 	background-color: white;
 	margin: auto;
+	line-height: 1.4;
 }
 #sidebar {
 	padding: 40px 20px;
 	background-color: black;
-/*	padding-bottom: 69.75%;*/
+	padding-bottom: 0;
 }
 #sidebarloc {
 	padding: 40px 20px;
 	background-color: black;
-	padding-bottom: 100%;
+	padding-bottom: 0;
 }
 @media (min-width: 1000px) {
 	#sidebar {
@@ -99,6 +106,7 @@ a:visited {
 		width: 250px;
 		top: 9.75%;
 		right: 47%;
+		background-color: black;
 	}
 	#sidebarloc {
 		margin: 0 calc(50vw - 250px);
